@@ -6,7 +6,13 @@
 #define uint8_t cyg_uint8
 #define uint16_t cyg_uint16
 #define uint32_t cyg_uint32
+
+#define int8_t cyg_int8
+#define int16_t cyg_int16
+#define int32_t cyg_int32
+
 #define loff_t off_t
+
 
 #define kvec iovec
 #endif /* __LINUX_TYPES_H__ */
